<resources>
    <string name="app_name">Apna Bank</string>
    <string name="apna_bank">APNA BANK</string>
    <string name="mpin">MPIN</string>
    <string name="user_id">User-ID</string>
    <string name="mpin1"><u>MPIN</u></string>
    <string name="user_id1"><u>User-ID</u></string>
    <string name="transfer">Transfer</string>
    <string name="withdraw">Withdraw</string>
    <string name="transfer1"><u>Transfer</u></string>
    <string name="withdraw1"><u>Withdraw</u></string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>