<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/bank"
        app:layout_constraintBottom_toTopOf="@+id/uid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:background="@android:color/transparent"
        android:text="@string/mpin"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uid" />

    <Button
        android:id="@+id/uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:background="@android:color/transparent"
        android:text="@string/user_id1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <EditText
            android:id="@+id/pan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_gravity="center"
            android:maxLength="10"
            android:inputType="textPersonName"
            android:hint="PAN Number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <EditText
            android:id="@+id/m_pin"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:ems="6"
            android:maxLength="6"
            android:minEms="6"
            android:maxEms="6"
            android:layout_gravity="center"
            android:hint="@string/mpin"
            android:textAlignment="center"
            android:visibility="gone"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_gravity="center"
            android:maxLength="20"
            android:inputType="textPersonName"
            android:hint="@string/user_id" />
        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <EditText
            android:id="@+id/pwd"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:ems="15"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/login"
            android:padding="12dp"
            android:backgroundTint="@color/pink"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>